// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns correct shape 1`] = `
Object {
  "hasErrors": false,
  "isLoading": true,
  "items": Array [],
  "setShowAllItems": [Function],
  "showAllItems": false,
  "totalQuantity": 0,
}
`;

exports[`uses static data if provided 1`] = `
Object {
  "hasErrors": false,
  "isLoading": true,
  "items": Array [
    Object {
      "name": "static item",
    },
  ],
  "setShowAllItems": [Function],
  "showAllItems": true,
  "totalQuantity": 1,
}
`;
